fix: z-index

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -44,6 +44,7 @@
 			}
 			transition: $default-trans;
 			position: fixed;
+			z-index: 100;
 			top: -100%;
 			left: 0;
 			width: 100%;
@@ -90,7 +91,7 @@
 			width: 30px;
 			height: 20px;
 			position: relative;
-			z-index: 10;
+			z-index: 101;
 			cursor: pointer;
 			span{
 				position: absolute;
